--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "webpack-dev-server": "^2.4.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.1",
     "style-loader": "^0.13.1",
     "stylus-loader": "^2.4.0"
